added homepage component, main.css and minor changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>web-profile</title>
+    <title>Frantisek Farkas</title>
   </head>
   <body>
     <div id="app"></div>
