--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Frantisek Farkas</title>
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="480">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#f6852e">
+    <!-- <meta name="msapplication-TileColor" content="#f6852e">
+    <meta name="msapplication-TileImage" content="/static/img/ms-icon-144x144.png"> -->
+    <meta name="theme-color" content="#000000" />
+    <base href="/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Marek Holovac">
+    <title>Marek Holovac</title>
   </head>
   <body>
     <div id="app"></div>
