--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <meta name="theme-color" content="#000000" />
     <base href="/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Marek Holovac">
-    <title>Marek Holovac</title>
+    <meta property="og:title" content="web-profile">
+    <title>Web-profile</title>
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    
   </head>
   <body>
     <div id="app"></div>
